# edge-speech-recognition

./: .gitignore  Makefile  README.md  demo.ipynb  pyproject.toml  requirements.txt  results.md
config/: default.yaml
experiments/profiles/: adb_ort_perf.txt  summary.json
notebooks/: device_profiling_experiments.ipynb  training_demo.ipynb
results/: README.md  jupyter_profile_summary.json  profile_summary.json
scripts/: adb_benchmark_onnx.sh
src/: export.py  export_onnx.py  profile_device.py
src/dataset/: __init__.py  data_module.py  dataset.py  download.py  local_recorder.py  manifest.py  speechocean_downloader.py
